Bug 440868 - Online quote source cannot be deleted if the previously selected source is of type GHNS
Summary: Online quote source cannot be deleted if the previously selected source is of...
Status: RESOLVED FIXED
Alias: None
Product: alkimia
Classification: Frameworks and Libraries
Component: Online quotes widget (other bugs)
Version First Reported In: 8.1.0
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-08-11 11:39 UTC by Ralf Habacker
Modified: 2022-04-08 04:41 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 8.1.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2021-08-11 11:39:15 UTC
STEPS TO REPRODUCE
1. download portable package from KDE binary factory (https://kmymoney.org/snapshots.php#kmymoney5-aq6)
2. unpack the portable package
2. start online quotes editor
3. select profile starting with name 'alkimia'
4. install GHNS source for example 'alkimia-fx-rate-net'
5. duplicate that source and change the suffix '.copy' to '-copy'
6. select the source 'alkimia-fx-rate-net', then 'alkimia-fx-rate-net-copy'

OBSERVED RESULT
The 'delete' button is disabled

EXPECTED RESULT
The 'delete' button should not be disabled

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: openSUSE_Leap_15.2
KDE Frameworks Version: 5.71.0
Qt Version: 5.12.7
Comment 1 Ralf Habacker 2021-08-11 12:29:30 UTC
It turned out that the rename to 'alkimia-fx-rate-net-copy' happened only in the widget while the source still has the name 'alkimia-fx-rate-net.copy', which explains that the delete button was disabled.
Comment 2 Ralf Habacker 2021-08-11 13:18:33 UTC
Git commit 9f8a81805b665967f783037fdcdee17254a2e8d4 by Ralf Habacker.
Committed on 11/08/2021 at 13:18.
Pushed by habacker into branch '8.1'.

Fix renaming quote sources by keyboard

Starting a renaming by keyboard (Enter on Mac, F2 on other platforms) is
recognized by the widget, but not by the class AlkOnlineQuotesWidget::Private,
which subsequently leads to errors in slotQuoteSourceRenamed().
FIXED-IN:8.1.1

M  +18   -0    src/alkonlinequoteswidget.cpp

https://invent.kde.org/office/alkimia/commit/9f8a81805b665967f783037fdcdee17254a2e8d4
Comment 3 Ralf Habacker 2021-08-11 13:18:41 UTC
Git commit a58ef41b99abc8d8ae80bd12d3cab92008013556 by Ralf Habacker.
Committed on 11/08/2021 at 13:10.
Pushed by habacker into branch '8.1'.

Fix bug not reseting the source name in case a rename fails

M  +2    -0    src/alkonlinequoteswidget.cpp

https://invent.kde.org/office/alkimia/commit/a58ef41b99abc8d8ae80bd12d3cab92008013556
Comment 4 Ralf Habacker 2021-08-19 14:26:03 UTC
Git commit 246154a289d4b10bd4e7cf252b5b9bde5b1fde75 by Ralf Habacker.
Committed on 19/08/2021 at 14:24.
Pushed by habacker into branch 'master'.

Fix bug not reseting the source name in case a rename fails

M  +2    -0    src/alkonlinequoteswidget.cpp

https://invent.kde.org/office/alkimia/commit/246154a289d4b10bd4e7cf252b5b9bde5b1fde75
Comment 5 Ralf Habacker 2021-08-19 14:26:19 UTC
Git commit 595186bee8409f30e5db091fffa245fc53ad92e8 by Ralf Habacker.
Committed on 19/08/2021 at 14:24.
Pushed by habacker into branch 'master'.

Fix renaming quote sources by keyboard

Starting a renaming by keyboard (Enter on Mac, F2 on other platforms) is
recognized by the widget, but not by the class AlkOnlineQuotesWidget::Private,
which subsequently leads to errors in slotQuoteSourceRenamed().
FIXED-IN:8.1.1

M  +18   -0    src/alkonlinequoteswidget.cpp

https://invent.kde.org/office/alkimia/commit/595186bee8409f30e5db091fffa245fc53ad92e8
Comment 6 Ralf Habacker 2022-04-08 04:41:49 UTC
Git commit 2508234a452a29e0baa9fbc009ded6da84eed127 by Ralf Habacker.
Committed on 08/04/2022 at 04:32.
Pushed by habacker into branch 'master'.

Fix renaming quote sources by keyboard

Starting a renaming by keyboard (Enter on Mac, F2 on other platforms) is
recognized by the widget, but not by the class AlkOnlineQuotesWidget::Private,
which subsequently leads to errors in slotQuoteSourceRenamed().
FIXED-IN:8.1.1

Add members m_idNumber and m_idSelector in alkonlinequotesource
Add entries in alkonlinequoteswidget
Mod unit tests for the new members

M  +25   -1    src/alkonlinequotesource.cpp
M  +2    -0    src/alkonlinequotesource.h

https://invent.kde.org/office/alkimia/commit/2508234a452a29e0baa9fbc009ded6da84eed127