Fix renaming quote sources by keyboard

Starting a renaming by keyboard (Enter on Mac, F2 on other platforms) is
recognized by the widget, but not by the class AlkOnlineQuotesWidget::Private,
which subsequently leads to errors in slotQuoteSourceRenamed().

BUG:440868
FIXED-IN:8.1.1

Add members m_idNumber and m_idSelector in alkonlinequotesource
Add entries in alkonlinequoteswidget
Mod unit tests for the new members